feature: support makefile, cuslog 0 module design
Signed-off-by: Xinwei Xiong(cubxxw) <3293172751nss@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,11 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+bin/
+_output/
+tools/
+tmp/
 
 # Go workspace file
 go.work
