--- a/.github/workflows/assigness.yml
+++ b/.github/workflows/assigness.yml
@@ -1,7 +1,7 @@
 name: Assign reviewers based on assignees
 on:
   pull_request:
-    types: [assigned, unassigned]
+    types: [triage/assigned, triage/unresolved]
 
 jobs:
   assignee_to_reviewer:
